# Tallycheck-Suite

./: .dockerignore  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vercel.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy.yml  swaggerhub.yml
.husky/: pre-push
apps/intranet/: Dockerfile  docker-compose.yml  eslint.config.js  jest.config.ts  nginx.conf  project.json
apps/intranet/backend/: .env.example  Dockerfile  __init__.py  attendance_routes.py  auth_routes.py  beacon_routes.py  department_routes.py  employee_routes.py  models.py  mypy.ini  platform_routes.py  project.json  report_routes.py  requirements.txt  safechild_routes.py  seed_attendance.py  (+6 more)
apps/website/: README.md  project.json
docs/: best_practices.md  deployment_and_domains_roadmap.md
docs/api/: redocly.yaml  tcheck-academic.openapi.yaml  tcheck-corporate.openapi.yaml  vcheck.openapi.yaml
docs/intranet/: dev_doc.md  openapi.yaml
libs/api-client/: eslint.config.js  jest.config.ts  orval.config.ts  project.json  tsconfig.json  tsconfig.lib.json
libs/auth/: eslint.config.js  project.json
libs/py_auth/: README.md  __init__.py  auth0.py  pyproject.toml
libs/py_config/: config.py  pyproject.toml
libs/py_errors/: __init__.py  errors.py  pyproject.toml
libs/py_success/: __init__.py  pyproject.toml  success.py
libs/shell/: eslint.config.js  project.json  tsconfig.json
libs/theme/: jest.config.ts  project.json  tsconfig.spec.json
libs/ui/: project.json  tsconfig.json
libs/util/: jest.config.ts  project.json  tsconfig.json
tools/: copy-static.mjs
(+186 files in other folders)
