[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-config"
version = "0.0.0"
description = "Shared Python config helper for Omni app backends."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["py_config"]

[tool.setuptools.package-dir]
"py_config" = "."
