[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-errors"
version = "0.0.0"
description = "Shared Python error classes for Omni app backends."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
]

[tool.setuptools]
packages = ["py_errors"]

[tool.setuptools.package-dir]
"py_errors" = "."